--- a/A_dbms/templates/dbms/agree/agree_board/entrust/max/6-charge-1.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust/max/6-charge-1.html
@@ -8,7 +8,7 @@
     <p>4）<u>{{ single_quota_rate }}</u></p>
 {% endif %}
 <p>（二）具体数额：按以下第<strong><u>2）</u></strong>项执行：</p>
-<p>1）一次收取担保综合费金额为：人民币 ；</p>
+<p>1）一次收取担保综合费金额为：人民币<u>&nbsp&nbsp&nbsp</u>；</p>
 <p>2）按签订《同意放款确认书》或《保证合同》、《保函》时确认的担保额度以本合同确定的担保综合费率计算收取；</p>
 <p>3）如担保债务有中长期贷款，则分别为：第一年<u>&nbsp&nbsp&nbsp</u>万元；第二年<u>&nbsp&nbsp&nbsp</u>万元；第三年<u>&nbsp&nbsp&nbsp</u>万元；第四年<u>&nbsp&nbsp&nbsp</u>万元；第五年<u>&nbsp&nbsp&nbsp</u>万元；</p>
 <p>4）<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>。</p>
