--- a/A_dbms/templates/dbms/agree/agree_board/entrust/max/6-charge-1.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust/max/6-charge-1.html
@@ -1,11 +1,11 @@
 <p>（一）收取标准：按以下第<span class="str str-p"><u>4）</u></span>项收取担保综合费：</p>
 <p>1）担保品种为人民币借款时，每年按担保本金总额的<u>&nbsp&nbsp&nbsp</u>收取，不足一年的，按一年收取；</p>
-<p>2）担保品种为银行承兑汇票时，3个月期限承兑每次按担保总额的<u>&nbsp&nbsp&nbsp</u>/年一次性收取，6个月期限承兑每次按担保总额的<u>&nbsp&nbsp&nbsp</u>/年/次收取；</p>
+<p>2）担保品种为银行承兑汇票时，三个月期限承兑每次按担保总额的<u>&nbsp&nbsp&nbsp</u>/年一次性收取，6个月期限承兑每次按担保总额的<u>&nbsp&nbsp&nbsp</u>/年/次收取；</p>
 <p>3）担保品种为保函时：A、按次收取：每次按担保敞口总额的<u>&nbsp&nbsp&nbsp</u>%收取；B、按担保时间收取：每月按担保敞口总额的<u>&nbsp&nbsp&nbsp</u>% 收取。C、按年收取：每年按担保敞口总额的<u>&nbsp&nbsp&nbsp</u>%收取；</p>
 {% if rate_b %}
-    <p>4）按以下约定执行：按担保本金总额的<u>{{ single_quota_rate }}</u>%/年收取[含税]，不足一年的，按一年收取。</p>
+    <p>4）按以下约定执行：担保品种为贷款或承兑汇票的担保综合费，期限三个月以内（含）费率为1%；期限三个月到六个月（含）费率为1.5%；期限六个月到一年（含）费率为<u>{{ single_quota_rate }}%</u>。</p>
 {% else %}
-    <p>4）<u>{{ single_quota_rate }}</u></p>
+    <p>4）按以下约定执行：<strong><u>{{ single_quota_rate }}</u></strong></p>
 {% endif %}
 <p>（二）具体数额：按以下第<strong><u>2）</u></strong>项执行：</p>
 <p>1）一次收取担保综合费金额为：人民币<u>&nbsp&nbsp&nbsp</u>；</p>
@@ -15,7 +15,7 @@
 <p>（三）收取时间：按以下第<strong><u>2）</u></strong>项执行：</p>
 <p>1）乙方于甲方与债权银行或受益人签订《保证合同》前将该笔担保所涉及的担保综合费款项支付给甲方；</p>
 <p>2）乙方于甲方每次向债权方出具《同意放款确认书》前将该笔担保所涉及的担保综合费款项支付给甲方；</p>
-<p>3）于担保期内每年的 月 日前支付当年的担保综合费；</p>
+<p>3）于担保期内每年的<u>&nbsp&nbsp&nbsp</u>月<u>&nbsp&nbsp&nbsp</u>日前支付当年的担保综合费；</p>
 <p>4）乙方于 前将该笔担保所涉及的担保综合费款项支付给甲方；</p>
 <p>5）<u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>。</p>
 <p>（四）收取方式：现金或转账支付。</p>
