--- a/A_dbms/templates/dbms/agree/sign/sign-xd.html
+++ b/A_dbms/templates/dbms/agree/sign/sign-xd.html
@@ -53,6 +53,12 @@
                 </td>
             </tr>
             <tr>
+                <td colspan="6">副总经理意见：<br><br><br>
+                    <span style="padding-left: 400pt">签名：</span><br><br>
+                    <span style="padding-left: 400pt">时间：</span>
+                </td>
+            </tr>
+            <tr>
                 <td colspan="6">总经理意见：<br><br><br>
                     <span style="padding-left: 400pt">签名：</span><br><br>
                     <span style="padding-left: 400pt">时间：</span>
