--- a/A_dbms/templates/dbms/agree/agree_board/loan_co/mortgage-list.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_co/mortgage-list.html
@@ -4,112 +4,19 @@
 <table cellspacing="0" cellpadding="0">
     {% for warrant in counter_obj.warrant_counter.warrant.all %}
         {% if warrant.warrant_typ == 1 or warrant.warrant_typ == 2 %}
-            {% if forloop.first %}<!--第一次循环-->
-                <tr>
-                    <td colspan="2" align="center">抵 押 人</td>
-                    <td colspan="5">
-                        {% for ownership in warrant.ownership_warrant.all %}
-                            {{ ownership.owner.name }}{% if not forloop.last %}、{% endif %}
-                        {% endfor %}
-                    </td>
-                </tr>
-                <tr>
-                    <td align="center">抵押财产名称</td>
-                    <td align="center">规划用途</td>
-                    <td align="center">面积(平方米)</td>
-                    <td align="center">处所</td>
-                    <td align="center">权利证书编号</td>
-                    <td align="center">评估价值（元）</td>
-                    <td align="center">备注</td>
-                </tr>
-                {% if warrant.warrant_typ == 2 %}<!--第一次循环->房产包-->
-                    {% for house_bag in warrant.housebag_warrant.all %}<!--房产包循环-->
-                        {% if forloop.counter == 1 %}<!--房产包首次循环-->
-                            <tr>
-                                <td rowspan="{{ counter_warrant_list_count }}">{{ counter_property_type }}</td>
-                                <td>{{ house_bag.get_housebag_app_display }}</td>
-                                <td align="right">{{ house_bag.housebag_area }}</td>
-                                <td>{{ house_bag.housebag_locate }}</td>
-                                <td rowspan="{{ warrant.housebag_warrant.all.count }}">
-                                    {% for ownership in warrant.ownership_warrant.all %}
-                                        {{ ownership.ownership_num }}{% if not forloop.last %}、{% endif %}
-                                    {% endfor %}
-                                </td>
-                                <td align="right">{{ warrant.evaluate_value|default_if_none:'' }}</td>
-                                <td></td>
-                            </tr>
-                        {% else %}<!--房产包非首次循环-->
-                            <tr>
-                                <td>{{ house_bag.get_housebag_app_display }}</td>
-                                <td align="right">{{ house_bag.housebag_area }}</td>
-                                <td>{{ house_bag.housebag_locate }}</td>
-                                <td align="right">{{ warrant.evaluate_value|default_if_none:'' }}</td>
-                                <td></td>
-                            </tr>
-                        {% endif %}
-                    {% endfor %}
-                {% else %} <!--第一次循环->非房产包-->
-                    <tr>
-                        <td rowspan="{{ counter_warrant_list_count }}">{{ counter_property_type }}</td>
-                        <td>{{ warrant.house_warrant.get_house_app_display }}</td>
-                        <td align="right">{{ warrant.house_warrant.house_area }}</td>
-                        <td>{{ warrant.house_warrant.house_locate }}</td>
-                        <td>
-                            {% for ownership in warrant.ownership_warrant.all %}
-                                {{ ownership.ownership_num }}{% if not forloop.last %}、{% endif %}
-                            {% endfor %}
-                        </td>
-                        <td align="right">{{ warrant.evaluate_value|default_if_none:'' }}</td>
-                        <td></td>
-                    </tr>
-                {% endif %}
-            {% else %}
-                {% if warrant.warrant_typ == 2 %}
-                    {% for house_bag in warrant.housebag_warrant.all %}
-                        {% if forloop.counter == 1 %}
-                            <tr>
-                                <td>{{ house_bag.get_housebag_app_display }}</td>
-                                <td align="right">{{ house_bag.housebag_area }}</td>
-                                <td>{{ house_bag.housebag_locate }}</td>
-                                <td rowspan="{{ warrant.housebag_warrant.all.count }}">
-                                    {% for ownership in warrant.ownership_warrant.all %}
-                                        {{ ownership.ownership_num }}{% if not forloop.last %}、{% endif %}
-                                    {% endfor %}
-                                </td>
-                                <td align="right">{{ warrant.evaluate_value|default_if_none:'' }}</td>
-                                <td></td>
-                            </tr>
-                        {% else %}
-                            <tr>
-                                <td>{{ house_bag.get_housebag_app_display }}</td>
-                                <td align="right">{{ house_bag.housebag_area }}</td>
-                                <td>{{ house_bag.housebag_locate }}</td>
-                                <td align="right">{{ warrant.evaluate_value|default_if_none:'' }}</td>
-                                <td></td>
-                            </tr>
-                        {% endif %}
-                    {% endfor %}
-                {% else %}
-                    <tr>
-                        <td>{{ warrant.house_warrant.get_house_app_display }}</td>
-                        <td align="right">{{ warrant.house_warrant.house_area }}</td>
-                        <td>{{ warrant.house_warrant.house_locate }}</td>
-                        <td>
-                            {% for ownership in warrant.ownership_warrant.all %}
-                                {{ ownership.ownership_num }}{% if not forloop.last %}、{% endif %}
-                            {% endfor %}
-                        </td>
-                        <td align="right">{{ warrant.evaluate_value|default_if_none:'' }}</td>
-                        <td></td>
-                    </tr>
-                {% endif %}
-            {% endif %}
-            <tr>
-                <td colspan="7" style="text-indent: 16pt">
-                    本《抵押物清单》是编号为{{ counter_obj.counter_num }}《{{ counter_obj.get_counter_name_display }}》的组成部分。
-                </td>
-            </tr>
+            {% include 'dbms/agree/agree_board/loan_co/mortgage-1-2.html' %}
+        {% elif warrant.warrant_typ == 5 %}
+            {% include 'dbms/agree/agree_board/loan_co/mortgage-5.html' %}
+        {% else %}
+            <p>？？？？？？？？？？？？？</p>
+            <p>？？？？？？？？？？？？？</p>
+            <p>？？？？？？？？？？？？？</p>
         {% endif %}
+        <tr>
+            <td colspan="7" style="text-indent: 16pt">
+                本《抵押物清单》是编号为{{ counter_obj.counter_num }}《{{ counter_obj.get_counter_name_display }}》的组成部分。
+            </td>
+        </tr>
     {% endfor %}
 </table>
 <!--签单签字信息-->
