--- a/A_dbms/templates/dbms/agree/agree_board/sign-approval-xd.html
+++ b/A_dbms/templates/dbms/agree/agree_board/sign-approval-xd.html
@@ -77,13 +77,13 @@
         {% if forloop.first %}
             <tr>
                 <td align="center" rowspan="{{ result_count }}">声明/承诺</td>
-                <td align="center">{{ result.get_result_typ_display }}({{ result.custom.name }})</td>
+                <td align="center">{{ result.get_result_typ_display }}({{ result.custom.short_name }})</td>
                 <td align="center" colspan="3"></td>
                 <td align="center">{{ result.counter_copies }}2份</td>
             </tr>
         {% else %}
             <tr>
-                <td align="center">{{ result.get_result_typ_display }}({{ result.custom.name }})</td>
+                <td align="center">{{ result.get_result_typ_display }}({{ result.custom.short_name }})</td>
                 <td align="center" colspan="3">{{ result.counter_num }}</td>
                 <td align="center">{{ result.counter_copies }}2份</td>
             </tr>
