--- a/A_dbms/templates/dbms/agree/agree_board/counter/z/z-appendix-draft.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/z/z-appendix-draft.html
@@ -9,7 +9,7 @@
 </table>
 <p>甲方将负责保管以上{{ counter_draft_obj.get_typ_display }}，直至丙方还清<strong><u>{{ agree_amount_cn }}</u></strong>贷款及相关利息（贷款期限：<strong><u>{{ credit_term_cn }}期</u></strong>）。</p>
 <p>若发生甲方代偿情形，甲方将行使质权，收回款项将直接用于抵偿代偿款项本金、利息及其他相关费用。若质权行使中遭遇拒付等事项，甲方享有对乙方及其前手的追索权等所有票据权利。</p>
-<p>在此期间，丙方质押的上述{{ counter_draft_obj.get_typ_display }}到期的，可提前10个工作日提供甲方认可的其他反担保物或归还部分借款的方式换取，具体要求如下：</p>
+<p>在此期间，乙方质押的上述{{ counter_draft_obj.get_typ_display }}到期的，可提前10个工作日提供甲方认可的其他反担保物或归还部分借款的方式换取，具体要求如下：</p>
 <p>1、采取提供其他{{ counter_draft_obj.get_typ_display }}方式换取，需提供甲方认可的不低于拟换取{{ counter_draft_obj.get_typ_display }}总价值的相应{{ counter_draft_obj.get_typ_display }}。</p>
 <p>2、采取归还部分借款方式换取的，需归还不低于拟换取{{ counter_draft_obj.get_typ_display }}总价值的借款金额。</p>
 <p>如到期{{ counter_draft_obj.get_typ_display }}未能按上述要求进行换取，甲方有权要求丙方提前归还全部借款，或者行使上述质押{{ counter_draft_obj.get_typ_display }}质权，回收资金用于归还丙方借款本金、利息及其他所有相关费用。</p>
