--- a/A_dbms/templates/dbms/warrant/scan/warrant_tab/draftbag.html
+++ b/A_dbms/templates/dbms/warrant/scan/warrant_tab/draftbag.html
@@ -9,20 +9,25 @@
             <th>票面金额</th>
             <th>出票日期</th>
             <th>到期日</th>
+            <th>状态</th>
             <th>操作</th>
         </tr>
         </thead>
         <tbody id="draftbag-tb">
         {% for draft in warrant_obj.draft_warrant.extend_draft.all %}
-            <tr draftbag-nid="{{ draft.id }}">
+            <tr draftbag-nid="{{ draft.id }}" draftbag-num="{{ draft.draft_num }}" db-s="{{ draft.draft_state }}" db-sv="{{ draft.get_draft_state_display }}">
                 <td>{{ forloop.counter }}</td>
                 <td>{{ draft.draft_num }}</td>
                 <td>{{ draft.get_draft_typ_display }}</td>
                 <td>{{ draft.draft_acceptor }}</td>
                 <td>{{ draft.draft_amount }}</td>
                 <td>{{ draft.issue_date }}</td>
-                <td>{{ draft.due_date }}</td>
-                <td><a class="btn btn-danger btn-xs delDraftBagB">删除</a></td>
+                <td>{{ draft.issue_date }}</td>
+                <td>{{ draft.get_draft_state_display }}</td>
+                <td>
+                    <a class="btn btn-primary btn-xs draftStoragesB">出入库</a>
+                    <a class="btn btn-danger btn-xs delDraftBagB">删除</a>
+                </td>
             </tr>
         {% endfor %}
         </tbody>
