--- a/A_dbms/templates/dbms/warrant/modl/draftbag-storages-mod.html
+++ b/A_dbms/templates/dbms/warrant/modl/draftbag-storages-mod.html
@@ -7,6 +7,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
                 <h4 class="modal-title" id="draftStoragesModalH"></h4>
+                <input style="display: none" name="db-sn" id="dbSn">
                 <input style="display: none" name="draftbag_id" id="draftStoragesModalId">
             </div>
             <div class="modal-body">
