--- a/A_dbms/templates/dbms/warrant/scan/warrant_tab/draftbag.html
+++ b/A_dbms/templates/dbms/warrant/scan/warrant_tab/draftbag.html
@@ -22,7 +22,7 @@
                 <td>{{ draft.draft_acceptor }}</td>
                 <td>{{ draft.draft_amount }}</td>
                 <td>{{ draft.issue_date }}</td>
-                <td>{{ draft.issue_date }}</td>
+                <td>{{ draft.due_date }}</td>
                 <td>{{ draft.get_draft_state_display }}</td>
                 <td>
                     <a class="btn btn-primary btn-xs draftStoragesB">出入库</a>
