--- a/A_dbms/templates/dbms/agree/agree_board/counter/c-s-z.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/c-s-z.html
@@ -50,6 +50,8 @@
         {% elif counter_warrant_typ == 55 %}
             {% if other_typ == 21 %}
                 {% include 'dbms/agree/agree_board/counter/z/z-appendix-other-21.html' %}
+            {% elif other_typ == 41 %}
+                {% include 'dbms/agree/agree_board/counter/z/z-appendix-other-41.html' %}
             {% else %}
                 <p>？？？？？？？？？？？？？？？？？？？？？？？？？？</p>
                 <p>？？？？？？？？？？？？？？？？？？？？？？？？？？</p>
