--- a/A_dbms/templates/dbms/agree/agree_board/counter/d/2-property-1-d-z.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/d/2-property-1-d-z.html
@@ -27,6 +27,10 @@
         <p>1、乙方同意以其名下总价值<strong><u>{{ cost_str }}万元</u></strong>（人民币大写金额：<strong><u>{{ cost_cn }}</u></strong>）的{{ counter_other_obj.get_other_typ_display }}出质。上述出质权利详见《质押权利清单》，该质押权利清单为本合同组成部分，与本合同具有同等法律效力。</p>
         <p>2、上述出质权利暂作价________________________（币种及大写金额），但该价格并不作为甲方依据本合同对出质权利进行处分的估价依据，也不构成对甲方行使质权的任何限制。出质权利的最终价值以质权实现时实际处理出质权利所得价款为准。</p>
         <p>3、质押权利派生权益，系指质押权利的从权利、孳息及法律法规规定的财产权利，质权的效力及于出质权利的从权利和孳息，该派生权利必须记入甲方指定的保管账户内，作为本质押项下贷款偿付的保证。</p>
+    {% elif counter_other_obj.other_typ == 41 %}
+        <p>1、乙方同意以其名下的<strong><u>{{ counter_other_obj.get_other_typ_display }}所有权</u></strong>出质。上述出质权利详见《质押权利清单》，该质押权利清单为本合同组成部分，与本合同具有同等法律效力。</p>
+        <p>2、上述出质权利暂作价________________________（币种及大写金额），但该价格并不作为甲方依据本合同对出质权利进行处分的估价依据，也不构成对甲方行使质权的任何限制。出质权利的最终价值以质权实现时实际处理出质权利所得价款为准。</p>
+        <p>3、质押权利派生权益，系指质押权利的从权利、孳息及法律法规规定的财产权利，质权的效力及于出质权利的从权利和孳息，该派生权利必须记入甲方指定的保管账户内，作为本质押项下贷款偿付的保证。</p>
     {% else %}
         <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
         <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
