--- a/A_dbms/templates/dbms/review/classification/provide-filter.html
+++ b/A_dbms/templates/dbms/review/classification/provide-filter.html
@@ -30,7 +30,8 @@
 
     <label class="pull-right">
         <a class="btn btn-success btn-sm " target="_blank" href="{% url 'dbms:report_fication_list' %}">
-            汇总表</a></label>
+            汇总表</a>
+    </label>
 
     <label class="pull-right">
         <a class="btn btn-primary btn-sm " id="FicationAllB">批量分类</a>
