--- a/A_dbms/templates/dbms/warrant/modl/mod_form/other-add-edit.html
+++ b/A_dbms/templates/dbms/warrant/modl/mod_form/other-add-edit.html
@@ -35,7 +35,7 @@
         <label id="e_cost" class="pull-right">{{ form_other_add_eidt.cost.errors }}</label>
     </div>
 
-    <div class="form-group"><!--动产描述-->
+    <div class="form-group"><!--描述-->
         <label for="id_other_detail"
                class="col-sm-3 control-label">{{ form_other_add_eidt.other_detail.label }}：</label>
         <div class="col-sm-9">{{ form_other_add_eidt.other_detail }}</div>
