--- a/A_dbms/templates/dbms/warrant/modl/warrant-add-mod.html
+++ b/A_dbms/templates/dbms/warrant/modl/warrant-add-mod.html
@@ -25,15 +25,18 @@
                         {% include 'dbms/warrant/modl/mod_form/vehicle-add-edit.html' %}
                         {% include 'dbms/warrant/modl/mod_form/chattel-add-edit.html' %}
                         {% include 'dbms/warrant/modl/mod_form/other-add-edit.html' %}
-                    {% elif warrant_typ_n == 1 %}
-                        {% include 'dbms/warrant/modl/mod_form/warrant-edit.html' %}
-                        {% include 'dbms/warrant/modl/mod_form/house-add-edit.html' %}
-                    {% elif warrant_typ_n == 2 %}
-                        {% include 'dbms/warrant/modl/mod_form/warrant-edit.html' %}
-                        {% include 'dbms/warrant/modl/mod_form/ground-add-edit.html' %}
-                    {% elif warrant_typ_n == 99 %}
-                        {% include 'dbms/warrant/modl/mod_form/warrant-edit.html' %}
-                        {% include 'dbms/warrant/modl/mod_form/hypothec-add-edit.html' %}
+
+                        {% include 'dbms/warrant/modl/mod_form/other-add-edit-41.html' %}
+
+{#                    {% elif warrant_typ_n == 1 %}#}
+{#                        {% include 'dbms/warrant/modl/mod_form/warrant-edit.html' %}#}
+{#                        {% include 'dbms/warrant/modl/mod_form/house-add-edit.html' %}#}
+{#                    {% elif warrant_typ_n == 2 %}#}
+{#                        {% include 'dbms/warrant/modl/mod_form/warrant-edit.html' %}#}
+{#                        {% include 'dbms/warrant/modl/mod_form/ground-add-edit.html' %}#}
+{#                    {% elif warrant_typ_n == 99 %}#}
+{#                        {% include 'dbms/warrant/modl/mod_form/warrant-edit.html' %}#}
+{#                        {% include 'dbms/warrant/modl/mod_form/hypothec-add-edit.html' %}#}
                     {% endif %}
                 </form>
             </div>
