--- a/A_dbms/templates/dbms/agree/agree_board/counter/_a/warrant-typ-55-41.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_a/warrant-typ-55-41.html
@@ -1,10 +1,10 @@
 {% if forloop.counter == 1 %}
     <tr>
         <td align="center" width="5%">序号</td>
-        <td align="center" width="20%">专利名称</td>
+        <td align="center" width="20%">商标名称</td>
         <td align="center">申请/注册人</td>
         <td align="center">申请/注册号</td>
-        <td align="center">国际分类</td>
+        <td align="center">分类</td>
         <td align="center">被担保债权数额</td>
         <td align="center">评估价值</td>
     </tr>
